--- a/colorGame.css
+++ b/colorGame.css
@@ -1,9 +1,19 @@
 body {
 	background-color: #232323;
+	margin: 0;
+	font-family: "Verdana";
+
 }
 
 h1 {
 	color: white;
+	text-align: center;
+	background-color: steelblue;
+	margin: 0;
+	font-weight: normal;
+	text-transform: uppercase;
+	line-height: 1.1;
+	padding: 20px 0;
 }
 
 #stripe {
@@ -13,23 +23,53 @@ h1 {
 	
 }
 
-/*#message {
-	color: white;
+#message {
+	display: inline-block;
+	width: 20%;
 }
-*/
+
 .square {
 	width: 30%;
 	background: purple;
 	padding-bottom: 30%;
 	float: left;
 	margin: 1.66%;
+	border-radius: 15%;
+	transition: background 0.6s;
+	/*dodatkowe wsparcie dla przegądarek Safari(webkit) i Firefox(moz)*/
+	-webkit-transition: background 0.6;
+	-moz-transition: background 0.6;
 }
 
 #container {
-	margin: 0 auto;
+	margin: 20px auto;
 	max-width: 600px;
 }
 
 .selected {
-	background-color: blue;
+	color: white;
+	background: steelblue;
+}
+
+#colorDisplay {
+	font-size: 150%;
+}
+
+button {
+	border: none;
+	background: none;
+	text-transform: uppercase;
+	height: 100%;
+	font-weight: 700;
+	color: steelblue;
+	letter-spacing: 1px;
+	font-size: inherit;
+	transition: all 0.5s;
+	-webkit-transition: background 0.6;
+	-moz-transition: background 0.6;
+}
+
+button:hover {
+	color: white;
+	background: steelblue;
 }
