--- a/colorGame.css
+++ b/colorGame.css
@@ -67,6 +67,7 @@ button {
 	transition: all 0.5s;
 	-webkit-transition: background 0.6;
 	-moz-transition: background 0.6;
+	outline: none;
 }
 
 button:hover {
